@@ -1,6 +1,6 @@
-Date: 2020-07-19
+Date: 2020-07-21
 Package: CHNOSZ
-Version: 1.3.6-42
+Version: 1.3.6-43
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
